Add rest of content

--- a/Responsive-Header/index.html
+++ b/Responsive-Header/index.html
@@ -97,7 +97,23 @@
             </span>
         </div>
     </div>
-
+    <footer>
+        <div class="about-info">
+            <p>Madusanka Nipunajith</p>
+            <p>madushankanipunajith@gmail.com</p>
+            <p>168/B Oruthota Gampaha</p>
+        </div>
+        <div class="copyright">
+            <p>Copyright 2022</p>
+        </div>
+        <div class="social">
+            <a><i class="fa-brands fa-facebook-f"></i></a>
+            <a><i class="fa-brands fa-github"></i></a>
+            <a><i class="fa-brands fa-instagram"></i></a>
+            <a><i class="fa-brands fa-pinterest"></i></a>
+            <a><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+    </footer>
     <script src="./js/script.js"></script>
 </body>
 </html>
