--- a/Responsive-Header/about.html
+++ b/Responsive-Header/about.html
@@ -37,7 +37,9 @@
                 </span>
             </span>
         </div>
-        <div class="section-2"></div>
+        <div class="section-2">
+            <img id="about-img" src="./img/cv-min.jpg">
+        </div>
     </div>
     <div class="bio">
         <div class="birth">
@@ -57,5 +59,6 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d283.635643273164!2d79.98233137176639!3d7.077382160933048!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2fb67a22e72d9%3A0x913a2c56a49c8d8e!2sGampaha!5e1!3m2!1sen!2slk!4v1654490925566!5m2!1sen!2slk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <script src="./js/script.js"></script>
+    <script src="./js/loader.js"></script>
 </body>
 </html>
