Add Responsive pogress bar

--- a/Responsive-Header/skills.html
+++ b/Responsive-Header/skills.html
@@ -26,7 +26,7 @@
     <div class="spinner"></div>
     <div class="row-1">
             <div class="image">
-                <img src="./img/badminton-award.jpg">
+                <img src="./img/">
                 <button class="animation"> Read More</button>
             </div>
             <div class="image">
